--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <h1>Tic-Tac-Toe</h1>
         <div class="container">
+            <input type="text" id="initial-symbol" placeholder="Enter 'X' or 'O'">
         <div class="game">
             <button class="box"></button>
             <button class="box"></button>
